tdf#153887 Fraction number format: avoid 0/0

If round value is an integer and there is no integer part in the number
format, then nDiv was wrongly forced to 0.
Add corresponding unit tests.

Change-Id: Ib69393eca8f6c2bdda0eacfc83637ab0c971ff2d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/149118
Tested-by: Jenkins
Reviewed-by: Eike Rathke <erack@redhat.com>
(cherry picked from commit dc9b8c31aaf72812dc205f610638098898a4cde7)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150085
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>