svl/source/numbers/zformat.cxx
@@ -2835,9 +2835,10 @@ void SvNumberformat::ImpGetFractionElements ( double& fNumber, sal_uInt16 nIx,
     fIntPart = floor(fNumber); // Integral part
     fNumber -= fIntPart;         // Fractional part
     const ImpSvNumberformatInfo& rInfo = NumFor[nIx].Info();
-    nDiv = lcl_GetDenominatorString( rInfo, NumFor[nIx].GetCount() ).toInt32();
-    if( nDiv > 0 )
+    sal_Int64 nForcedDiv = lcl_GetDenominatorString( rInfo, NumFor[nIx].GetCount() ).toInt32();
+    if( nForcedDiv > 0 )
     {   // Forced Denominator
+        nDiv = nForcedDiv;
         nFrac = static_cast<sal_Int64>(floor ( fNumber * nDiv ));
         double fFracNew = static_cast<double>(nFrac) / static_cast<double>(nDiv);
         double fFracNew1 = static_cast<double>(nFrac + 1) / static_cast<double>(nDiv);
@@ -2891,7 +2892,8 @@ void SvNumberformat::ImpGetFractionElements ( double& fNumber, sal_uInt16 nIx,
     if (nFrac >= nDiv)
     {
         ++fIntPart;
-        nFrac = nDiv = 0;
+        nFrac = 0;
+        nDiv = ( nForcedDiv > 0 ) ? nForcedDiv : 1;
     }
 }
 
