svl/qa/unit/svl.cxx
@@ -1448,6 +1448,18 @@ void Test::testUserDefinedNumberFormats()
         sExpected = "-575 540/697";
         checkPreviewString(aFormatter, sCode, -575.774749601315, eLang, sExpected);
     }
+    {  // tdf#153887: integer value without integer part displayed
+        sCode = "#/?";
+        sExpected = "2/1";
+        checkPreviewString(aFormatter, sCode, 1.95, eLang, sExpected);
+        checkPreviewString(aFormatter, sCode, 2.00, eLang, sExpected);
+        checkPreviewString(aFormatter, sCode, 2.05, eLang, sExpected);
+        sCode = "0/8";
+        sExpected = "16/8";
+        checkPreviewString(aFormatter, sCode, 1.95, eLang, sExpected);
+        checkPreviewString(aFormatter, sCode, 2.00, eLang, sExpected);
+        checkPreviewString(aFormatter, sCode, 2.05, eLang, sExpected);
+    }
     {  // tdf#102507: left alignment of denominator
         sCode = "# ?/???";
         sExpected = "3 1/2  ";
